Update Report + fixed bugs.